# test-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  README.md  SECURITY.md  flake.nix  release-please-config.json
.github/: CODEOWNERS
.github/workflows/: audit.yml  bench.yml  docker.yml  release.yml  tests_and_checks.yml
aproject/: Cargo.toml  README.md
aproject-benches/: Cargo.toml
aproject-benches/benches/: a_benchmark.rs
aproject-wasm/: Cargo.toml  README.md
aproject-wasm/src/: lib.rs
aproject-wasm/tests/: web.rs
aproject/src/: lib.rs
aproject/src/test_utils/: rvg.rs
aproject/tests/: integration_test.rs
dev/bench/: data.js
docker/: Dockerfile
docs/specs/: latest.json
examples/: Cargo.toml
src/: docs.rs  lib.rs  main.rs  settings.rs
src/extract/: json.rs
src/middleware/: logging.rs  reqwest_retry.rs
src/routes/: health.rs
src/tracing_layers/: format_layer.rs
test-template/: CHANGELOG.md  Cargo.toml  README.md
test-template-wasm/: CHANGELOG.md  Cargo.toml  README.md
test-template-wasm/src/: lib.rs
test-template-wasm/tests/: web.rs
test-template/src/: lib.rs  main.rs
test-template/tests/: integration_test.rs
tests/: integration_test.rs
