[package]
name = "test-template"
version = "0.2.0"
description = ""
keywords = []
categories = []

include = ["/src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "Apache-2.0 or MIT"
readme = "README.md"
edition = "2021"
rust-version = "1.64"
documentation = "https://docs.rs/test-template"
repository = "https://github.com/zeeshanlakhani/test-template"
authors = ["Zeeshan Lakhani <zeeshan.lakhani@gmail.com>"]

[lib]
path = "src/lib.rs"
doctest = true

[[bin]]
name = "test-template"
path = "src/main.rs"
doc = false

[dependencies]
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default = []

# Speedup build on macOS
# See https://blog.rust-lang.org/2021/03/25/Rust-1.51.0.html#splitting-debug-information
[profile.dev]
split-debuginfo = "unpacked"
