[package]
name = "aproject-benches"
version = "0.1.0"
publish = false
edition = "2021"
authors = ["Zeeshan Lakhani <zeeshan.lakhani@gmail.com>"]

[dependencies]
aproject = { path = "../aproject", version = "0.1", features = ["test_utils"] }

[dev-dependencies]
criterion = { version = "0.4", default-features = false }

[[bench]]
name = "a_benchmark"
harness = false
