[package]
name = "aproject"
version = "0.1.0"
description = ""
keywords = []
categories = []
include = ["/src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "Apache-2.0 or MIT"
readme = "README.md"
edition = "2021"
rust-version = "1.64"
documentation = "https://docs.rs/aproject"
repository = "https://github.com/zeeshanlakhani/test-template/tree/main/aproject"
authors = ["Zeeshan Lakhani <zeeshan.lakhani@gmail.com>"]

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
proptest = { version = "1.0", optional = true }
tracing = "0.1"

[dev-dependencies]
proptest = "1.0"

[features]
default = []
test_utils = ["proptest"]
